# One_Simple_Weather_Info

./: CMakeLists.txt  Makefile  README.md
include/: callback.h  libC.h  weather.h
lib/my/: my_abs.c  my_atoi.c  my_div.c  my_floor.c  my_getenv.c  my_isalnum.c  my_isalpha.c  my_isascii.c  my_isblank.c  my_iscntrl.c  my_isdigit.c  my_isgraph.c  my_islower.c  my_isprint.c  my_ispunct.c  my_isspace.c  my_isupper.c  my_isxdigit.c  my_itoa.c  my_memchr.c  my_memcmp.c  my_memcpy.c  my_memmove.c  my_memset.c  my_putchar.c  my_puts.c  my_realloc.c  my_revstr.c  my_strcat.c  my_strchr.c  my_strcmp.c  my_strcmpi.c  my_strcpy.c  my_strcspn.c  my_strdup.c  my_strlen.c  my_strlwr.c  my_strncat.c  my_strncmp.c  my_strncpy.c  (+7 more)
src/: convert_data.c  geolocalisation.c  main.c  warning.c
tests/: Makefile
